# just4Kicks

./: .env  .gitattributes  .gitignore  CNAME  README.md  bambi.html  bambi.qmd  just4kicks.html  just4kicks.qmd  kicker_model.html  kicker_model.qmd  leaderboard.csv  pyproject.toml  summary.Md  summary.html  utils.py
.github/workflows/: static.yml
R/: exploratory_modeling.qmd
archive/: ggplot_fail.qmd
data/: field_goal_attempts.csv  kickers.csv
model-archive/: exploratory_modeling.qmd  kicker_model.qmd
model-dev/: model.qmd
models/: exploratory_modeling.qmd  model.qmd
src/: bambi.qmd  model.qmd
