[project]
name = "just4kicks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bambi>=0.15.0",
    "great-tables>=0.17.0",
    "ipykernel>=6.29.5",
    "jax[cpu]>=0.6.2",
    "jupyter>=1.1.1",
    "llvmlite>=0.44.0",
    "numpy>=2.3.1",
    "nutpie>=0.15.1",
    "pandas>=2.3.0",
    "patsy>=1.0.1",
    "plotnine>=0.14.6",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pymc-extras>=0.2.7",
    "pymc>=5.23.0",
    "seaborn>=0.13.2",
]
